# rendering

./: .envrc  .func.sh  .gitignore  .tmuxp.yaml  CMakeLists.txt  _types.py  a.out  alacritty.yml  ast_types.py  constants.h  donut.c  donut_obf.c  draw.c  draw.h  fifo.c  fifo.h  gen_scene.py  globals.h  helpers.c  input.c  input.h  interpreter.py  io.c  kbfind.c  kitty.conf  lexer.py  lexer_types.py  loader.c  loader.h  main.c  main.py  matrix.c  matrix.h  obj_loader.py  parser.py  quat.py  rasterizer.c  rasterizer.h  renderer.c  renderer.c.bak  (+6 more)
.cache/clangd/index/: constants.h.607087AF71D75EC1.idx  fifo.c.B7D178209E8B6104.idx  fifo.h.39CADA3D4C0A8959.idx  input.c.CF631332BD2F8680.idx  input.h.36A4D71B730F75A4.idx  kbfind.c.27DA442E2C3B42F2.idx  main.c.DE0ACEB813229699.idx  matrix.c.DA11121840FC1830.idx  matrix.h.F955D844644D3B79.idx  scene_data.c.57ED94A50F6BBBF1.idx  scene_data.h.07C7DA1C20E68452.idx  types.h.7F6D8FDD9E6C20E9.idx  utilz.h.E592A6F8B39787ED.idx
compiler/: _types.py  interpreter.py  main.py
